Staff login added the forgot password button :<

--- a/staff_Login/index.html
+++ b/staff_Login/index.html
@@ -65,8 +65,11 @@
 					</div>
 
 					<div class="text-center p-t-50">
-				
+						<a class="txt2" href="#">
+							Forgot your password?
+						</a>
 					</div>
+
 				</form>
 			</div>
 		</div>
