******* shu dh buat about us & service

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -18,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+	
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -59,10 +60,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0"> K BOUTIQUE HOTEL </h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <p class="text-white-50 mb-4"> Welcome to K Boutique Hotel! Our hotel conveniently set in the town of Teluk Intan, located along Jalan Sungai Manik. We are just a 10 minutes drive to town where the famous tourist attraction leaning clock tower Menara Condong is situated.</p>
                     </div>
                 </div>
             </div>
@@ -70,40 +70,57 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
+                <h2 class="text-center mt-0">Our Service</h2>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <i class='fas fa-wifi' style='font-size:48px;color:red'></i>
+                            <h3 class="h4 mb-2">Free WiFi</h3> 
+                            <p class="text-muted mb-0">Free wireless internet access!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <i class='fas fa-mug-hot' style='font-size:48px;color:red'></i>
+                            <h3 class="h4 mb-2">Breakfast Available</h3>
+                            <p class="text-muted mb-0">Served quite an array of breakfast foods ranging from hot items such as make your own 
+							 waffles, scrambled eggs, bacon, and oatmeal to cold items such as cereal, fresh fruit salad, etc.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                           <i class='fas fa-smoking-ban' style='font-size:48px;color:red'></i>
+                            <h3 class="h4 mb-2">Non-Smooking Rooms </h3>
+                            <p class="text-muted mb-0">Guests are allowed to smoke on their room balcony, but not inside the hotel room</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <i class='fas fa-tshirt' style='font-size:48px;color:red'></i>
+                            <h3 class="h4 mb-2">Laundry</h3>
+                            <p class="text-muted mb-0">Services all laundry and dry cleaning of all hotel soft furnishing as well as staff uniforms and guest laundry/dry cleaning needs</p>
                         </div>
+						</div>
+					 <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fa fa-clock-o" style="font-size:48px;color:red"></i>
+                            <h3 class="h4 mb-2">Front Desk Service 24 Hours</h3>
+                            <p class="text-muted mb-0">If there are no instructions on or around the phone then you could probably just dial '0' for
+							front desk and ask to be connected to restaurant room service</p>
+                        </div>	
+                    </div>
+					<div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class='fas fa-luggage-cart' style='font-size:48px;color:red'></i>
+                            <h3 class="h4 mb-2">Lugguage Storage</h3>
+                            <p class="text-muted mb-0">The hotel will have a space you can leave your luggage and collect it later</p>
+                        </div>	
                     </div>
                 </div>
             </div>
         </section>
+		
         <!--Facilities-->
         <div id="facilities">
             <div class="container-fluid p-0">
