Sign up function for customer

--- a/customerlogin/index.html
+++ b/customerlogin/index.html
@@ -55,9 +55,7 @@
 					<div class="flex-sb-m w-full p-b-30">
 						<div class="contact100-form-checkbox">
 							<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-							<label class="label-checkbox100" for="ckb1">
-								Remember me
-							</label>
+							
 						</div>
 
 						<div>
@@ -74,7 +72,7 @@
 						
 					<div>
 						<a href="../customersignup/index.html" class="txt1">
-								Doesn't have an account? Sign Up
+								Don't have an account? Sign Up
 						</a>
 					</div>
 					</div>
