--- a/reset_password/admin_reset_password.html
+++ b/reset_password/admin_reset_password.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email from ROOMESQUARE</title>
+    <title>K Boutique Hotel</title>
     <style type="text/css" data-styled-components="" data-styled-components-is-local="false">
       @media only screen and (min-width:30em) {
         .container {
@@ -1034,10 +1034,13 @@
 <span id="num" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> One Number
 </div>
 </div>
+	
+<br />
+
 <input type="password" class="input-lg form-control" name="password2" id="password2" placeholder="Repeat Password" autocomplete="off">
 <div class="row">
 <div class="col-sm-12">
-<span id="pwmatch" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> Passwords Match
+<span id="pwmatch" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> Password Match
 </div>
 </div>
 </form>
@@ -1045,7 +1048,7 @@
 </div><!--/row-->
 </div>
                       <div
-                      class="sc-bdVaJa dggHpc" display="block" style="box-sizing: border-box; position: static; border-radius: 0; -webkit-transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); overflow: inherit; padding: 0rem 0rem 0rem 0rem; margin: 1.5rem 0rem 1.5rem 0rem; border-top: none; border-right: none; border-bottom: none; border-left: none; display: block;">Press the button down below to set a new password.</div>
+                      class="sc-bdVaJa dggHpc" display="block" style="box-sizing: border-box; position: static; border-radius: 0; -webkit-transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); overflow: inherit; padding: 0rem 0rem 0rem 0rem; margin: 3rem 0rem 3rem 0rem; border-top: none; border-right: none; border-bottom: none; border-left: none; display: block;">Press the button down below to set a new password.</div>
                     </div>
                     <a class="sc-jzJRlG hznfox" color="primary" type="button" href="#"
                     role="button" style="-webkit-backface-visibility: hidden; backface-visibility: hidden; background-color: #F96854; border: 2px solid #F96854; border-radius: 0; box-sizing: border-box; display: inline-block; font-weight: 700; padding: 1rem 1.5rem; position: relative; text-align: center; text-decoration: none; text-transform: uppercase; -webkit-transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; white-space: inherit; cursor: pointer; color: #FFFFFF; font-size: 1rem;">
@@ -1060,7 +1063,7 @@
                 <tr>
                   <td style="padding: 0;">
                   
-                    <p class="sc-ifAKCX hiKSiS" color="gray3" scale="1" style="color: #4F687A; font-family: America, sans-serif; -webkit-letter-spacing: inherit; -moz-letter-spacing: inherit; -ms-letter-spacing: inherit; letter-spacing: inherit; margin: 0; opacity: 1; position: relative; text-align: inherit; text-transform: inherit; text-shadow: none; -webkit-transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); -webkit-user-select: inherit; -moz-user-select: inherit; -ms-user-select: inherit; user-select: inherit; font-size: 1rem; font-weight: 400; line-height: 1.5;">This form is for admin and staff reset password page.</p>
+                    <p class="sc-ifAKCX hiKSiS" color="gray3" scale="1" style="color: #4F687A; font-family: America, sans-serif; -webkit-letter-spacing: inherit; -moz-letter-spacing: inherit; -ms-letter-spacing: inherit; letter-spacing: inherit; margin: 0; opacity: 1; position: relative; text-align: inherit; text-transform: inherit; text-shadow: none; -webkit-transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1); -webkit-user-select: inherit; -moz-user-select: inherit; -ms-user-select: inherit; user-select: inherit; font-size: 1rem; font-weight: 400; line-height: 8;">This reset form is for Admin and Staff only.</p>
                     
                     </span>
                     </div>
