--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -29,9 +29,9 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Contact_Page/index.html">Rooms</a>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage/booking/booking.html">Rooms</a>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#facilities">Facilities</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage/booking/contact.html">Contact Us</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="../customerlogin/index.html">Sign In</a></li>
                     </ul>
                 </div>
