------- aku masukkan page profile for customer, nama dia profile.html

--- a/Homepage_signIn/index.html
+++ b/Homepage_signIn/index.html
@@ -32,8 +32,20 @@
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="booking/booking.html">Rooms</a>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#facilities">Facilities</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="booking/contact.html">Contact Us</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="">My Profile</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage/index.html">Log Out</a></li>
+						<li class="dropdown nav-item">
+                		<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                  		<div class="photo">
+                    	<img src="../assets/img/anime3.png" alt="Profile Photo">
+                  		</div>
+                  		<b class="caret d-none d-lg-block d-xl-block"></b>
+                  		<p class="d-lg-none">Log out</p>
+                		</a>
+                		<ul class="dropdown-menu dropdown-navbar">
+                  		<li class="nav-link"><a href="../Homepage_signIn/profile.html" class="nav-item dropdown-item">My Profile</a></li>
+                  		<li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">My Booking</a></li>
+                  		<li class="dropdown-divider"></li>
+                  		<li class="nav-link"><a href="../Homepage/index.html" class="nav-item dropdown-item">Log out</a></li></ul>
+              			</li>
                     </ul>
                 </div>
             </div>
