--- a/Homepage_signIn/index.html
+++ b/Homepage_signIn/index.html
@@ -1,3 +1,10 @@
+<?php	
+	session_start(); 
+	if (!(isset($_SESSION['username']) && $_SESSION['pass']{
+	header ("Location: ../customerlogin/index.html");
+}
+?>
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -18,7 +25,6 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-	
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -34,17 +40,16 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="booking/contact.html">Contact Us</a></li>
 						<li class="dropdown nav-item">
                 		<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                  		<div class="photo">
-                    	<img src="../assets/img/anime3.png" alt="Profile Photo">
+                  		<div>
+						My Info
                   		</div>
-                  		<b class="caret d-none d-lg-block d-xl-block"></b>
-                  		<p class="d-lg-none">Log out</p>
+                  		
                 		</a>
                 		<ul class="dropdown-menu dropdown-navbar">
                   		<li class="nav-link"><a href="../Homepage_signIn/profile.html" class="nav-item dropdown-item">My Profile</a></li>
                   		<li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">My Booking</a></li>
                   		<li class="dropdown-divider"></li>
-                  		<li class="nav-link"><a href="../Homepage/index.html" class="nav-item dropdown-item">Log out</a></li></ul>
+                  		<li class="nav-link"><a href="../Homepage_signIn/logout.php" class="nav-item dropdown-item">Log Out</a></li></ul>
               			</li>
                     </ul>
                 </div>
