Minor tweak god help me

--- a/customerlogin/index.html
+++ b/customerlogin/index.html
@@ -57,7 +57,7 @@
 						</div>
 
 						<div>
-							<a href="../reset_password/customer_reset_password.html" class="txt1">
+							<a href="../reset_password/customer_reset_password.php" class="txt1">
 								Forgot Password?
 							</a>
 							
