--- a/staffdashboard/examples/user.html
+++ b/staffdashboard/examples/user.html
@@ -16,7 +16,13 @@
   <link href="../assets/css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
   <link href="../assets/demo/demo.css" rel="stylesheet" />
 </head>
-
+<?php
+session_start();
+$custusername=$_SESSION['username'];
+$sql = 'SELECT * FROM `customers` WHERE username = "' . $_SESSION['username'] . '"';
+$result = mysqli_query($con, $sql) or trigger_error("Query Failed! SQL: $sql - Error: " . mysqli_error($con), E_USER_ERROR);
+$row=mysqli_fetch_array($result);
+?>
 <body class="">
   <div class="wrapper">
     <div class="sidebar">
@@ -82,16 +88,12 @@
                   <div class="photo">
                     <img src="../assets/img/anime3.png" alt="Profile Photo">
                   </div>
-                  <b class="caret d-none d-lg-block d-xl-block"></b>
-                  <p class="d-lg-none">
-                    Log out
-                  </p>
                 </a>
                 <ul class="dropdown-menu dropdown-navbar">
                   <li class="nav-link"><a href="user.html" class="nav-item dropdown-item">Profile</a></li>
                   <li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">Settings</a></li>
                   <li class="dropdown-divider"></li>
-                  <li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">Log out</a></li>
+                  <li class="nav-link"><a href="logout.php" class="nav-item dropdown-item">Log out</a></li>
                 </ul>
               </li>
               <li class="separator d-lg-none"></li>
@@ -120,7 +122,7 @@
                 <h5 class="title">Edit Profile</h5>
               </div>
               <div class="card-body">
-                <form>
+                <form action = "update.php" method = "POST">
                   <div class="row">
                     <div class="col-md-5 pr-md-1">
                       <div class="form-group">
@@ -130,71 +132,39 @@
                     </div>
                     <div class="col-md-3 px-md-1">
                       <div class="form-group">
-                        <label>Staff ID (disabled)</label>
-                        <input type="text" class="form-control" disabled = "" placeholder="Username" value="KBH001">
+                        <label>Staff Username </label>
+                        <input type="text" class="form-control" disabled = "" placeholder="Username" name = "username" value="KBH001">
                       </div>
                     </div>
-                    <div class="col-md-4 pl-md-1">
+                  </div>
+				  <div class="row">
+                    <div class="col-md-6 pr-md-1">
                       <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" placeholder="delila@gmail.com">
+                        <label>Email Address</label>
+                        <input type="email" class="form-control" placeholder="Email" name="email">
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-md-6 pr-md-1">
                       <div class="form-group">
-                        <label>First Name</label>
-                        <input type="text" class="form-control" placeholder="Company" value="Delila">
-                      </div>
-                    </div>
-                    <div class="col-md-6 pl-md-1">
-                      <div class="form-group">
-                        <label>Last Name</label>
-                        <input type="text" class="form-control" placeholder="Last Name" value="Ahmad">
+                        <label>Full Name</label>
+                        <input type="text" class="form-control" placeholder="Full Name" name="fullname">
                       </div>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-md-12">
+				  <div class="row">
+                    <div class="col-md-6 pr-md-1">
                       <div class="form-group">
-                        <label>Address</label>
-                        <input type="text" class="form-control" placeholder="Home Address" value="No. 10, Jalan 35, SS 4">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-4 pr-md-1">
-                      <div class="form-group">
-                        <label>City</label>
-                        <input type="text" class="form-control" placeholder="City" value="Petaling Jaya">
-                      </div>
-                    </div>
-                    <div class="col-md-4 px-md-1">
-                      <div class="form-group">
-                        <label>Country</label>
-                        <input type="text" class="form-control" placeholder="Country" value="Malaysia">
-                      </div>
-                    </div>
-                    <div class="col-md-4 pl-md-1">
-                      <div class="form-group">
-                        <label>Postal Code</label>
-                        <input type="text" class="form-control" placeholder="ZIP Code">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-8">
-                      <div class="form-group">
-                        <label>About Me</label>
-                        <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">I'm a very talented person.........</textarea>
+                        <label>Phone Number</label>
+                        <input type="text" class="form-control" placeholder="Phone No." name="phone">
                       </div>
                     </div>
                   </div>
                 </form>
               </div>
               <div class="card-footer">
-                <button type="submit" class="btn btn-fill btn-primary">Save</button>
+                <button type="submit" name = "updateButton" class="btn btn-fill btn-primary">Save</button>
               </div>
             </div>
           </div>
@@ -218,19 +188,6 @@
                 </p>
                 <div class="card-description">
                   Do not be scared of the truth!
-                </div>
-              </div>
-              <div class="card-footer">
-                <div class="button-container">
-                  <button href="javascript:void(0)" class="btn btn-icon btn-round btn-facebook">
-                    <i class="fab fa-facebook"></i>
-                  </button>
-                  <button href="javascript:void(0)" class="btn btn-icon btn-round btn-twitter">
-                    <i class="fab fa-twitter"></i>
-                  </button>
-                  <button href="javascript:void(0)" class="btn btn-icon btn-round btn-google">
-                    <i class="fab fa-google-plus"></i>
-                  </button>
                 </div>
               </div>
             </div>
