--- a/staffdashboard/examples/user.html
+++ b/staffdashboard/examples/user.html
@@ -133,7 +133,7 @@ $row=mysqli_fetch_array($result);
                     <div class="col-md-3 px-md-1">
                       <div class="form-group">
                         <label>Staff Username </label>
-                        <input type="text" class="form-control" disabled = "" placeholder="Username" name = "username" value="KBH001">
+                        <input type="text" class="form-control" placeholder="Username" name = "username">
                       </div>
                     </div>
                   </div>
