--- a/Homepage_signIn/profile.html
+++ b/Homepage_signIn/profile.html
@@ -42,7 +42,7 @@ $row=mysqli_fetch_array($result);
                   		<li class="nav-link"><a href="../Homepage_signIn/profile.html" class="nav-item dropdown-item">My Profile</a></li>
                   		<li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">My Booking</a></li>
                   		<li class="dropdown-divider"></li>
-                  		<li class="nav-link"><a href="../Homepage/index.html" class="nav-item dropdown-item">Log out</a></li>
+                  		<li class="nav-link"><a href="../Homepage_signIn/logout.php" class="nav-item dropdown-item">Log out</a></li>
                 		</ul>
               			</li>
                     </ul>
@@ -61,7 +61,7 @@ $row=mysqli_fetch_array($result);
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <div class="d-flex flex-row align-items-center back"><i class="fa fa-long-arrow-left mr-1 mb-1"></i>
-                        <h6>Back to home</h6>
+                        <h6><a href="index.html">Back to home<a></h6>
                     </div>
                     <h6 class="text-right">Edit Profile</h6>
                 </div>
