major usable functions

--- a/Homepage_signIn/index.html
+++ b/Homepage_signIn/index.html
@@ -46,7 +46,7 @@
                   		
                 		</a>
                 		<ul class="dropdown-menu dropdown-navbar">
-                  		<li class="nav-link"><a href="../Homepage_signIn/profile.html" class="nav-item dropdown-item">My Profile</a></li>
+                  		<li class="nav-link"><a href="../Homepage_signIn/profile.php" class="nav-item dropdown-item">My Profile</a></li>
                   		<li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">My Booking</a></li>
                   		<li class="dropdown-divider"></li>
                   		<li class="nav-link"><a href="../Homepage_signIn/logout.php" class="nav-item dropdown-item">Log Out</a></li></ul>
