--- a/admindashboard/examples/dashboard.html
+++ b/admindashboard/examples/dashboard.html
@@ -93,7 +93,7 @@
                   </p>
                 </a>
                 <ul class="dropdown-menu dropdown-navbar">
-                  <li class="nav-link"><a href="user.html" class="nav-item dropdown-item">Profile</a></li>
+                  <li class="nav-link"><a href="user.php" class="nav-item dropdown-item">Profile</a></li>
                   <li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">Settings</a></li>
                   <li class="dropdown-divider"></li>
                   <li class="nav-link"><a href="../examples/logout.php" class="nav-item dropdown-item">Log out</a></li>
