--- a/admindashboard/examples/dashboard.html
+++ b/admindashboard/examples/dashboard.html
@@ -22,10 +22,10 @@
   <link href="../assets/demo/demo.css" rel="stylesheet" />
 </head>
 
-<body class="">
+<body class="white-content">
   <div class="wrapper">
-    <div class="sidebar">
-      <div class="sidebar-wrapper">
+    <div class="sidebar" data="blue">
+      <div class="sidebar-wrapper" data="blue">
         <div class="logo">      
 		  <a href="javascript:void(0)" class="simple-text logo-mini">
             KBH
@@ -56,7 +56,7 @@
         </ul>
       </div>
     </div>
-    <div class="main-panel">
+    <div class="main-panel" data="blue">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-absolute navbar-transparent">
         <div class="container-fluid">
@@ -350,8 +350,8 @@
         <li class="adjustments-line">
           <a href="javascript:void(0)" class="switch-trigger background-color">
             <div class="badge-colors text-center">
-              <span class="badge filter badge-primary active" data-color="primary"></span>
-              <span class="badge filter badge-info" data-color="blue"></span>
+              <span class="badge filter badge-primary" data-color="primary"></span>
+              <span class="badge filter badge-info active" data-color="blue"></span>
               <span class="badge filter badge-success" data-color="green"></span>
             </div>
             <div class="clearfix"></div>
