------------ room page and others

--- a/Homepage_signIn/booking/booking.html
+++ b/Homepage_signIn/booking/booking.html
@@ -41,40 +41,27 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Offcanvas Menu Section Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="canvas-open">
-        <i class="icon_menu"></i>
-    </div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="canvas-close">
-            <i class="icon_close"></i>
-        </div>
-        <div class="search-icon  search-switch">
-            <i class="icon_search"></i>
-        </div>
-        <div class="header-configure-area">
-            <div class="language-option">
-                <img src="img/flag.jpg" alt="">
-                <span>EN <i class="fa fa-angle-down"></i></span>
-                <div class="flag-dropdown">
-                    <ul>
-                       <li><a href="../index.html">Home</a></li>
-                    </ul>
-                </div>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">K Boutique Hotel</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage_signIn/booking/room.html">Rooms</a>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#facilities">Facilities</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage/booking/contact.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="..Homepage_signIn/booking/booking.html">Book Now</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../customerlogin/index.html">Sign In</a></li>
+                </ul>
             </div>
-            <a href="#" class="bk-btn">Book Now</a>
         </div>
-        <nav class="mainmenu mobile-menu">
-        </nav>
-        <div id="mobile-menu-wrap"></div>
-        
-    </div>
-    <!-- Offcanvas Menu Section End -->
+    </nav>
+    <!--End Of Navigation-->
 
-  
-
-     <!-- Header Section Begin -->
+    <!-- Header Section Begin -->
     <header class="header-section header-normal">
         <div class="top-nav">
             <div class="container">
