--- a/Homepage_signIn/index.html
+++ b/Homepage_signIn/index.html
@@ -35,9 +35,9 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="booking/booking.html">Rooms</a>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage_signIn/booking/room.html">Rooms</a>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#facilities">Facilities</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="booking/contact.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../Homepage_signIn/booking/contact.html">Contact Us</a></li>
 						<li class="dropdown nav-item">
                 		<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                   		<div>
