--- a/admindashboard/examples/rooms.html
+++ b/admindashboard/examples/rooms.html
@@ -22,7 +22,7 @@
 
 <?php
 //create connection								
-$con=mysqli_connect("localhost","hotel","hotel","hoteldb");
+$con=mysqli_connect("localhost","id14806959_hotel","Zagx&Pk8|RGX-^Hw","id14806959_hoteldb");
 if (!$con) {
 	echo  mysqli_connect_error();
 	exit;
