--------- linking forr guesttt

--- a/Homepage/facility/facility.html
+++ b/Homepage/facility/facility.html
@@ -131,9 +131,9 @@
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
-                                        <li class="active"><a href="./index.php">Home</a></li>
-                                        <li><a href="..//booking/room.html">Rooms</a></li>
-                                        <li><a href="../facility/facility.html">Facility</a></li>
+                                        <li><a href="../index.php">Home</a></li>
+                                        <li><a href="../booking/room.html">Rooms</a></li>
+                                        <li class="active"><a href="../facility/facility.html">Facility</a></li>
                                         <li><a href="../booking/contact.html">Contact Us</a></li>
                                         <li><a href="../../customerlogin/index.html">Sign In</a></li>
                                 </ul>
