--- a/Homepage/booking/room.html
+++ b/Homepage/booking/room.html
@@ -131,11 +131,11 @@
                     <div class="nav-menu">
                         <nav class="mainmenu">
                             <ul>
-                                    <li class="active"><a href="../../index.php">Home</a></li>
-                                    <li><a href="./room.html">Rooms</a></li>
+                                    <li><a href="../index.php">Home</a></li>
+                                    <li class="active"><a href="room.html">Rooms</a></li>
                                     <li><a href="../facility/facility.html">Facility</a></li>
-                                    <li><a href="../../booking/contact.html">Contact Us</a></li>
-                                    <li><a href="../../../customerlogin/index.html">Sign In</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="../../customerlogin/index.html">Sign In</a></li>
                             </ul>
                         </nav>
                         <div class="nav-right search-switch">
