--- a/Homepage_signIn/booking/contactUs/contact.html
+++ b/Homepage_signIn/booking/contactUs/contact.html
@@ -103,8 +103,7 @@
                 <div class="col-lg-4">
                     <div class="contact-text">
                         <h2>Contact Us</h2>
-                        <p>K Boutique Hotel is located along Jalan Sungai Manik.
-						Easy access to the town centre which is just a 10 minutes drive away..</p>
+                        <p>Your feedback helps us change for the better. Got an idea that would help our website more? Have an opinion on one of our services?</p>
                         <table>
                             <tbody>
                                 <tr>
