--- a/Homepage/privacypolicy/privacypolicy.html
+++ b/Homepage/privacypolicy/privacypolicy.html
@@ -54,7 +54,7 @@
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
-                <li class="active"><a href="../index.php">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="..//booking/room.html">Rooms</a></li>
                 <li><a href="../booking/contact.html">Contact Us</a></li>
                 <li><a href="facility/facility.html">Facility</a></li>
@@ -113,7 +113,7 @@
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
-                                        <li class="active"><a href="./index.php">Home</a></li>
+                                        <li><a href="../index.php">Home</a></li>
                                         <li><a href="..//booking/room.html">Rooms</a></li>
                                         <li><a href="../facility/facility.html">Facility</a></li>
                                         <li><a href="../booking/contact.html">Contact Us</a></li>
@@ -244,7 +244,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <ul>
-                            <li><a href="./privacypolicy/privacypolicy.html">Privacy Notice</a></li>
+                            <li><a href="./privacypolicy.html">Privacy Notice</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-5">
